Modifications: includes family function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,11 @@ export(cov.Rchoice)
 export(estfun.Rchoice)
 export(getSummary.Rchoice)
 export(nObs.Rchoice)
+export(ordinal)
+import(Formula)
+import(car)
+import(ggplot2)
+import(lmtest)
+import(maxLik)
+import(plotrix)
+import(sandwich)
