--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,24 @@
 Package: Rchoice
-Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random
-    Parameters
-Version: 0.2
+Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random Parameters
+Version: 0.3
 Author: Mauricio Sarrias <msarrias86@gmail.com>
 Maintainer: Mauricio Sarrias <msarrias86@gmail.com>
-Description: Estimate Binary (Probit and Logit), Ordered (Probit and Logit) and
-    Poisson models with random parameters using Simulated Maximum Likelihood.
-    Rchoice handles cross-sectional and panel databases.
+Description: An implementation of simulated maximum likelihood method for the estimation of Binary (Probit and Logit), Ordered (Probit and Logit) and Poisson models with random parameters for cross-sectional and longitudinal data.
 Depends:
     R (>= 3.1.2),
     Formula,
-    maxLik,
+    maxLik
 Imports:
     msm,
     plm,
-    plotrix
+    plotrix,
+    stats
 Suggests:
     car,
     lmtest,
     memisc,
     pglm,
-    sandwich,
-    knitr
-VignetteBuilder: knitr
+    sandwich
 License: GPL (>= 2)
+URL: http://msarrias.weebly.com/rchoice-package-in-r.html
 LazyData: no
