--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,31 @@
 Package: Rchoice
-Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random Parameters
-Version: 0.3
-Author: Mauricio Sarrias <msarrias86@gmail.com>
-Maintainer: Mauricio Sarrias <msarrias86@gmail.com>
-Description: An implementation of simulated maximum likelihood method for the estimation of Binary (Probit and Logit), Ordered (Probit and Logit) and Poisson models with random parameters for cross-sectional and longitudinal data.
+Type: Package
+Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random
+    Parameters
+Version: 0.3-4
+Date: 2021-07-07
+Authors@R: person("Mauricio", "Sarrias", role = c("aut", "cre"), email = "msarrias86@gmail.com", comment = c(ORCID = "0000-0001-5932-4817"))
+Description: An implementation of simulated maximum likelihood method for the estimation of Binary (Probit and Logit), Ordered (Probit and Logit) and Poisson models with random parameters for cross-sectional and longitudinal data as presented in Sarrias (2016) <doi:10.18637/jss.v074.i10>.
 Depends:
-    R (>= 3.1.2),
+    R (>= 4.0),
     Formula,
     maxLik
 Imports:
+    sandwich,
+    miscTools,
+    numDeriv,
+    memisc,
     msm,
     plm,
     plotrix,
-    stats
+    stats,
+    graphics
 Suggests:
     car,
     lmtest,
-    memisc,
     pglm,
-    sandwich
 License: GPL (>= 2)
-URL: http://msarrias.weebly.com/rchoice-package-in-r.html
+URL: https://www.msarrias.com/rchoice-package-in-r.html
 LazyData: no
+RoxygenNote: 7.1.2
+Encoding: UTF-8
