Changes suggested by JSS

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: Rchoice
 Type: Package
 Title: Discrete Choice (Binary, Poisson and Ordered) Models with Random
     Parameters
-Version: 0.3-4
-Date: 2022-03-15
-Authors@R: person("Mauricio", "Sarrias", role = c("aut", "cre"), email = "msarrias86@gmail.com", comment = c(ORCID = "0000-0001-5932-4817"))
+Version: 0.3-5
+Date: 2022-04-20
+Authors@R: c(person("Mauricio", "Sarrias", role = c("aut", "cre"), email = "msarrias86@gmail.com", comment = c(ORCID = "0000-0001-5932-4817")), person("Yves", "Croissant", role = "ctb"), person("Achim", "Zeileis", role = "ctb")) 
 Description: An implementation of simulated maximum likelihood method for the estimation of Binary (Probit and Logit), Ordered (Probit and Logit) and Poisson models with random parameters for cross-sectional and longitudinal data as presented in Sarrias (2016) <doi:10.18637/jss.v074.i10>.
 Depends:
     R (>= 4.0),
@@ -24,8 +24,10 @@ Suggests:
     car,
     lmtest,
     pglm,
+    AER
 License: GPL (>= 2)
-URL: https://www.msarrias.com/rchoice-package-in-r.html
+URL: https://github.com/mauricio1986/Rchoice
+BugReports: https://github.com/mauricio1986/Rchoice/issues
 LazyData: no
 RoxygenNote: 7.1.2
 Encoding: UTF-8
